deploy/demo/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: doorman-demo
  labels:
    app.kubernetes.io/part-of: doorman
