deploy/demo/echo-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: echo
  labels:
    app.kubernetes.io/name: echo
spec:
  selector:
    app.kubernetes.io/name: echo
  ports:
    - name: http
      port: 80
      targetPort: http
